# PISCINE_PYTHON

./: README.md  piscine_python_00.ipynb  piscine_python_01.ipynb  requirements.txt
day0/ex00/: Hello.py
day0/ex01/: format_ft_time.py
day0/ex02/: find_ft_type.py
day0/ex03/: NULL_not_found.py
day0/ex04/: whatis.py
day0/ex05/: building.py
day0/ex06/: filterstring.py  ft_filter.py
day0/ex07/: sos.py
day0/ex08/: Loading.py  tester.py
day0/ex09/: LICENSE  README.md  pyproject.toml
day0/ex09/src/ft_package/: __init__.py  code.py
day01/ex00/: give_bmi.py  tester.py
day01/ex01/: array2D.py  tester.py
day01/ex02/: load_image.py  tester.py
day01/ex03/: zoom.py
day01/ex04/: load_image.py  rotate.py
day01/ex05/: load_image.py  pimp_image.py  tester.py
day02/ex00/: load_csv.py  tester.py
day02/ex01/: aff_life.py  load_csv.py
day02/ex02/: load_csv.py  projection_life.py
day02/ex03/: load_csv.py  projection_life.py
day03/ex00/: S1E9.py  tester.py
day03/ex01/: S1E7.py  S1E9.py  tester.py
day03/ex02/: DiamondTrap.py  tester.py
day03/ex03/: ft_calculator.py  tester.py
day03/ex04/: ft_calculator.py  tester.py
