[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="tphung", email="tphung@student.42.fr" },
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}

[project.urls]
Homepage = "https://github.com/beeguy74/PISCINE_PYTHON/"
